Text overflow issue solved for mobile portrait mode

--- a/scss/_shortname.scss
+++ b/scss/_shortname.scss
@@ -9,7 +9,7 @@
     text-align: center;
     vertical-align: middle;
     line-height: 2.1;
-    margin-right: 10px;
+    margin-right: 6px;
     position: relative;
     bottom: 2px;
 }
